--- a/Public/templates/Public/login.html
+++ b/Public/templates/Public/login.html
@@ -1,12 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-</head>
-<body>
-    {{ Text }}
-</body>
-</html>
+{% extends "base.html" %}
+{% load i18n static %}
+
+{% block title %}
+    {% trans 'Login' %}
+{% endblock title %}
+
+{% block css_files %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+{% endblock css_files %}
+
+{% block content %}
+    <div class="container h-100">
+		<div class="d-flex justify-content-center h-100">
+			<div class="user_card">
+				<div class="d-flex justify-content-center">
+					<div class="brand_logo_container">
+						<img src="{% static 'img/shamsipour.png' %}" class="brand_logo" title="{% trans 'Shamsipour Technical College' %}" alt="{% trans 'Shamsipour Technical College' %}">
+					</div>
+				</div>
+				<div class="d-flex justify-content-center form_container">
+					<form method="post" name="login_form">
+                        {% csrf_token %}
+						<div class="input-group mb-3">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-user"></i></span>
+							</div>
+							<input required type="text" name="username" class="form-control input_user" placeholder="{% trans 'Username' %}">
+						</div>
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-key"></i></span>
+							</div>
+							<input required type="password" name="password" class="form-control input_pass" placeholder="{% trans 'Password' %}">
+						</div>
+						<div class="form-group">
+							<div class="custom-control custom-checkbox">
+								<input name="remember_me" type="checkbox" class="custom-control-input" checked id="customControlInline">
+								<label class="custom-control-label" for="customControlInline">{% trans 'Remember me' %}</label>
+							</div>
+						</div>
+					</form>
+				</div>
+				<div class="d-flex justify-content-center mt-3 login_container">
+					<button onClick="document.login_form.submit();" type="button" name="button" class="btn login_btn">{% trans 'Login' %}</button>
+				</div>
+				<div class="mt-4">
+					<div class="d-flex justify-content-center links">
+						<a href="#">{% trans 'Forgot your password?' %}</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock content %}
