--- a/Public/templates/Public/vote.html
+++ b/Public/templates/Public/vote.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load i18n static %}
+
+{% block title %}
+    {% trans 'Vote' %}
+{% endblock title %}
+
+{% block content %}
     
-</body>
-</html>
+{% endblock content %}
