--- a/PollSystem/templates/footer.html
+++ b/PollSystem/templates/footer.html
@@ -1,3 +1,3 @@
 {% load static %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
