--- a/PollSystem/templates/base.html
+++ b/PollSystem/templates/base.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/admin.font-1520071291613.css' %}" />
+    <link href="{% static 'img/favicon.png' %}" rel="shortcut icon">
     {% block css_files %}{% endblock css_files %}
 </head>
 <body>
