--- a/Public/templates/Public/vote.html
+++ b/Public/templates/Public/vote.html
@@ -6,16 +6,28 @@
 {% endblock title %}
 
 {% block content %}
-{% if polls %}
-    {% for poll in polls %}
-        {{ poll.get_vote_count|default:"0" }}<br>
-        {% for question in poll.questions.all %}
-            {% for answer in question.question_answers.all %}
-                {{answer.value}}
-            {% endfor %}
-        {% endfor %}
-    {% endfor %}
-{% else %}
-    <h3>{% trans 'There is no polls Yet' %}</h3>
-{% endif %}
+<div class="container">
+    <div class="card">
+        <div class="card-header bg-primary">
+            sDFklmsdfkm
+        </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                </tr>
+            </tbody>    
+        </table>
+        <div class="card-footer">
+            <button type="submit" class="btn btn-primary">{% trans 'Register' %}</button>
+        </div>
+    </div>
+</div>
 {% endblock content %}
