--- a/Public/templates/Public/vote.html
+++ b/Public/templates/Public/vote.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n static %}
+{% load i18n static mathfilters %}
 
 {% block title %}
     {% trans 'Vote' %}
@@ -10,16 +10,18 @@
 <div class="container">
     {% if polls %}
         {% for poll in polls %}
-            <div class="card border-success">
+            <div class="card border-success" style="margin-bottom: 30px">
                 <div class="card-header text-white bg-primary border-primary">{{ poll.title }}</div>
                 <div class="card-body text-success border-info">
                     {% for question in poll.questions.all %}
                         <h5 class="card-title">{{ forloop.counter }}. {{ question.title }}</h5>
                         <div class="row no-gutters card-text text-justify text-dark">
                             {% for answer in question.question_answers.all %}
-                                <div class="col-md-12 col-lg-6 col-xl-4 col-sm-12 text-break">
-                                    <input type="radio" name="{{ question.pk }}" id="{{ answer.pk }}" value="{{ answer.pk }}"/>
-                                    <label for="{{ answer.pk }}">{{ answer.value }}</label>
+                                <div style="padding-left: 30px;" class="col-md-12 col-lg-{{ 12|intdiv:question.column }} col-xl-{{ 12|intdiv:question.column }} col-sm-12">
+                                    <label for="{{ question.pk }}:{{ answer.pk }}">
+                                        <input class='input' name="{{ question.pk }}:{{ answer.pk }}" type='radio' value="{{ question.pk }}:{{ answer.pk }}" id='{{ question.pk }}:{{ answer.pk }}'>
+                                        <span class='label'>{{ answer.value }}</span>
+                                    </label>
                                 </div>
                             {% endfor %}
                         </div>
@@ -33,5 +35,10 @@
     {% else %}
         <h3>{% trans 'There is no Poll Yet' %}
     {% endif %}
+    <div  style="margin-bottom: 10px" class=" text-center">
+        <a href="{% url "public:logout" %}" class="btn btn-primary col-sm-12 col-lg-12 col-md-12 col-xl-12 col-sm-12">
+            {% trans 'Logout' %}
+        </a>
+    </div>
 </div>
 {% endblock content %}
