fix the vote page change language form text issue, retranslate messages

--- a/Public/templates/Public/vote.html
+++ b/Public/templates/Public/vote.html
@@ -23,7 +23,7 @@
                             class="flag-icon flag-icon-ir"> </span> {% trans 'Persian' %}</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown09">
                         <a onClick="document.set_en_lang.submit();" class="dropdown-item" href="#us"><span
-                                class="flag-icon flag-icon-us"> </span> {% trans 'English' %}</a>
+                                class="flag-icon flag-icon-us"> </span> English</a>
                     </div>
                 </li>
             </ul>
@@ -39,7 +39,7 @@
                             class="flag-icon flag-icon-us"> </span> {% trans 'English' %}</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown09">
                         <a onClick="document.set_fa_lang.submit();" class="dropdown-item" href="#ir"><span
-                                class="flag-icon flag-icon-ir"> </span> {% trans 'Persian' %}</a>
+                                class="flag-icon flag-icon-ir"> </span> فارسی</a>
                     </div>
                 </li>
             </ul>
