--- a/Public/templates/Public/login.html
+++ b/Public/templates/Public/login.html
@@ -16,43 +16,7 @@
 
 {% block content %}
 <div class="container h-100">
-	<nav style="background:transparent!important;" class="navbar navbar-expand-lg navbar-light bg-light rounded">
-		<div class="collapse navbar-collapse" id="navbarsExample09">
-			{% if LANGUAGE_CODE == "fa" %}
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="{% url 'public:vote' %}" id="dropdown09"
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span
-							class="flag-icon flag-icon-ir"> </span> {% trans 'Persian' %}</a>
-					<div class="dropdown-menu" aria-labelledby="dropdown09">
-						<a onClick="document.set_en_lang.submit();" class="dropdown-item" href="#us"><span
-								class="flag-icon flag-icon-us"> </span> English</a>
-					</div>
-				</li>
-			</ul>
-			<form class="d.none" name="set_en_lang" action="{% url 'set_language' %}" method="post">
-				{% csrf_token %}
-				<input type="hidden" name="language" value="en">
-			</form>
-			{% else %}
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="{% url 'public:vote' %}" id="dropdown09"
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span
-							class="flag-icon flag-icon-us"> </span> {% trans 'English' %}</a>
-					<div class="dropdown-menu" aria-labelledby="dropdown09">
-						<a onClick="document.set_fa_lang.submit();" class="dropdown-item" href="#ir"><span
-								class="flag-icon flag-icon-ir"> </span> فارسی</a>
-					</div>
-				</li>
-			</ul>
-			<form class="d.none" name="set_fa_lang" action="{% url 'set_language' %}" method="post">
-				{% csrf_token %}
-				<input type="hidden" name="language" value="fa">
-			</form>
-			{% endif %}
-		</div>
-	</nav>
+	{% include 'Components/nav.html' with transparent=True %}
 
 	<div class="d-flex justify-content-center h-100">
 		<div class="user_card">
