--- a/PollSystem/templates/admin/base.html
+++ b/PollSystem/templates/admin/base.html
@@ -33,7 +33,7 @@
             {% endblock %}
             {% block userlinks %}
                 {% if site_url %}
-                    <a href="{{ site_url }}">{% trans 'View site' %}</a> /
+                    <a href="{% url 'public:view_result' chart_type='pie' %}">{% trans 'View site' %}</a> /
                 {% endif %}
                 {% if user.is_active and user.is_staff %}
                     {% url 'django-admindocs-docroot' as docsroot %}
