--- a/Public/templates/Public/login.html
+++ b/Public/templates/Public/login.html
@@ -41,7 +41,7 @@
 						<div class="input-group-append">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input required type="password" name="password" class="form-control input_pass"
+						<input id="pass_word_field" required type="password" name="password" class="form-control input_pass"
 							placeholder="{% trans 'Password' %}">
 					</div>
 					<div class="form-group">
@@ -67,21 +67,13 @@
 	</div>
 </div>
 {% endblock content %}
-{% comment %} {% block js_files %}
-<!-- {% if form.errors %}
+{% block js_files %}
 <script>
-	{
-		%
-		for field in form %
-	} {
-		%
-		for error in field.errors %
-	}
-	toastr.error('{{ error|escape }}'); {
-		% endfor %
-	} {
-		% endfor %
-	}
+	$("#pass_word_field").keypress(function(e) {
+		var keycode = (e.keyCode ? e.keyCode : e.which);
+		if (keycode == '13') {
+			document.login_form.submit();
+		}
+	});
 </script>
-{% endif %} -->
-{% endblock js_files %} {% endcomment %}
+{% endblock js_files %} 
