--- a/Public/templates/Public/login.html
+++ b/Public/templates/Public/login.html
@@ -23,8 +23,8 @@
 			<div class="d-flex justify-content-center">
 				<div class="brand_logo_container">
 					<img src="{% static 'img/shamsipour.png' %}" class="brand_logo"
-						title="{% trans 'Shamsipour Technical College' %}"
-						alt="{% trans 'Shamsipour Technical College' %}">
+						title=""
+						alt="">
 				</div>
 			</div>
 			<div class="d-flex justify-content-center form_container">
